<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:text="@string/tituloCate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="50dp"
            android:textAlignment="textStart"
            android:gravity="start"
            android:textSize="20sp"
            android:text="@string/msgCate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rCarne"
                android:layout_marginLeft="50dp"
                android:textSize="20sp"
                android:text="@string/rCarnes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            </RadioButton>

            <RadioButton
                android:id="@+id/rEnsalada"
                android:layout_marginLeft="50dp"
                android:textSize="20sp"
                android:text="@string/rEnsa"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            </RadioButton>

            <RadioButton
                android:id="@+id/rPasta"
                android:layout_marginLeft="50dp"
                android:textSize="20sp"
                android:text="@string/rPasta"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            </RadioButton>

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">


            <Button
                android:onClick="OnClickListaComida"
                android:background="#49586D"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:id="@+id/btnListaComida"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="fill_parent"
                android:text="@string/msgSig"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>