<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="50sp"
        android:text="@string/tituloInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <TextView
                android:layout_marginLeft="50dp"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="20sp"
                android:text="@string/msgGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rFemenino"
                    android:layout_marginLeft="20dp"
                    android:textSize="20sp"
                    android:text="@string/rFeme"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                </RadioButton>

                <RadioButton
                    android:id="@+id/rMasculino"
                    android:layout_marginLeft="20dp"
                    android:textSize="20sp"
                    android:text="@string/rMascu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                </RadioButton>

            </RadioGroup>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <TextView
                android:layout_marginLeft="50dp"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="20sp"
                android:text="@string/msgEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtEdad"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <TextView
                android:layout_marginLeft="50dp"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="20sp"
                android:text="@string/msgUbicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:id="@+id/edtUbicacion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:lines="20"
            android:minLines="5"
            android:scrollHorizontally="false"
            android:scrollbars="vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">


            <Button
                android:layout_gravity="center"
                android:id="@+id/btnMenu"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="fill_parent"
                android:text="@string/msgSig"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>